log
Thu 11 May 2023 03:16:55 PM UTC: 
 tests:  0|4
total_score: 0/70
b3d82b2
Thu 11 May 2023 03:22:44 PM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
0261cf1
Thu 11 May 2023 03:26:13 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:29: error: ‘data’ undeclared (first use in this function)
   22 |   return pq -> heapArray[0],data;
      |                             ^~~~
heap.c:22:29: note: each undeclared identifier is reported only once for each function it appears in
heap.c:22:28: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   22 |   return pq -> heapArray[0],data;
      |                            ^
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8e1ff11
Thu 11 May 2023 03:26:28 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
21a85e1
Thu 11 May 2023 03:26:44 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
fce4253
Thu 11 May 2023 03:27:07 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
cf3b707
Thu 11 May 2023 03:38:03 PM UTC: 
 heap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:35: error: expected expression before ‘[’ token
   35 |   while(priority > (pq->heapArray([i-1 / 2]).priority) && i != 0){
      |                                   ^
heap.c:35:21: error: called object is not a function or function pointer
   35 |   while(priority > (pq->heapArray([i-1 / 2]).priority) && i != 0){
      |                     ^~
heap.c:37:16: error: expected ‘;’ before ‘}’ token
   37 |     i = (i - 1)
      |                ^
      |                ;
   38 | 
   39 |   }
      |   ~             
Compilation failed
92d3005
Thu 11 May 2023 03:42:40 PM UTC: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:35: error: expected expression before ‘[’ token
   35 |   while(priority > (pq->heapArray([i-1 / 2]).priority) && i != 0){
      |                                   ^
heap.c:35:21: error: called object is not a function or function pointer
   35 |   while(priority > (pq->heapArray([i-1 / 2]).priority) && i != 0){
      |                     ^~
Compilation failed
70fa39c
Thu 11 May 2023 03:43:03 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
d39259b
Thu 11 May 2023 03:43:23 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
26255cb
Thu 11 May 2023 03:48:48 PM UTC: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:48:12: error: unused variable ‘aux’ [-Werror=unused-variable]
   48 |   heapElem aux;
      |            ^~~
heap.c:47:44: error: unused variable ‘i’ [-Werror=unused-variable]
   47 |   int hijoInferior = 1 , hijoSuperior = 2, i = 0;
      |                                            ^
heap.c:47:26: error: unused variable ‘hijoSuperior’ [-Werror=unused-variable]
   47 |   int hijoInferior = 1 , hijoSuperior = 2, i = 0;
      |                          ^~~~~~~~~~~~
heap.c:47:7: error: unused variable ‘hijoInferior’ [-Werror=unused-variable]
   47 |   int hijoInferior = 1 , hijoSuperior = 2, i = 0;
      |       ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9832af6
Thu 11 May 2023 10:21:54 PM UTC: 
 heap.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:50:12: error: unused variable ‘aux’ [-Werror=unused-variable]
   50 |   heapElem aux;
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
528666c
Thu 11 May 2023 10:23:28 PM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:50:32: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   50 |   heapElem aux = pq->heapArray[pos];
      |                                ^~~
      |                                pow
heap.c:50:32: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5ca605b
Thu 11 May 2023 10:23:39 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
a5c4e11
Thu 11 May 2023 10:24:12 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  7|1
total_score: 50/70
0b3ffec
Thu 11 May 2023 10:26:42 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
1628bac
Fri 12 May 2023 06:46:13 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
9655f17
